desenhando a main page

--- a/src/MainPage/styles.css
+++ b/src/MainPage/styles.css
@@ -17,3 +17,9 @@
   .Main-Frame{
     margin-top: 10px;
   }
+
+  .label-icon {
+    font-size: 12px;
+    text-align: center;
+    color: #2b3133;
+  }
