--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -66,7 +66,8 @@ legend {
   border: 1px solid transparent;
   padding: 4px;
   margin: 2px;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;  
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .btn:hover {
@@ -75,7 +76,7 @@ legend {
 
 .btn-primary {
   width: 100%;
-  background-color: #362624; 
+  background-color: #362624;
   font-size: 2rem;
   color: white;
 }
@@ -111,8 +112,8 @@ legend {
 }
 
 .button-success:hover {
-	color: #fff;
-	background-color: #0f421b;
+  color: #fff;
+  background-color: #0f421b;
 }
 
 /*
