--- a/src/pages/Books/BooksList/styles.css
+++ b/src/pages/Books/BooksList/styles.css
@@ -1,5 +1,5 @@
 .Card-Book {
-  /* background-color: var(--main-color-secondary); */
+  background-color: ghostwhite;
   display: flex;
   min-width: 100vh;
   flex-direction: column;
@@ -9,10 +9,47 @@
   position: relative;
   border-radius: 0.25rem;
   padding: 1rem;
-  margin: 1rem;
-  color: black;
+  margin: 0.5rem;
+  border: 2px solid gray;
 }
 
 .Main-Frame {
   margin-top: 10px;
+}
+
+.p-title {
+  font-size: 2.5rem;
+  align-self: flex-start;
+  margin-top: 5px;
+  margin-bottom: 3px;
+  text-decoration: underline;
+}
+
+.p-subtitle {
+  font-size: 2rem;
+  align-self: flex-start;
+  font-style: oblique;
+  margin-bottom: 3px;
+}
+
+.p-authoryear {
+  font-size: 1.8rem;
+  align-self: flex-start;
+  font-weight: bold;
+  font-style: oblique;
+  color: gray;
+  margin-bottom: 3px;
+}
+
+.p-pages{
+  font-size: 1.8rem;
+  align-self: flex-start;
+  margin-bottom: 3px;
+}
+
+.p-rate{
+  font-size: 2rem;
+  align-self: flex-start;
+  margin-bottom: 3px;
+  font-style: oblique;
 }
