implementando detail books functions

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -116,6 +116,10 @@ legend {
   background-color: #0f421b;
 }
 
+.Link-Card-Item {
+  text-decoration: none;
+}
+
 /*
 .card {
   position: relative;
