--- a/src/pages/Books/BooksList/styles.css
+++ b/src/pages/Books/BooksList/styles.css
@@ -1,3 +1,38 @@
 .Main-Frame {
-  margin-top: 10px;
+  margin-top: 60px;
+}
+
+.pnl-search-group {
+  padding: 1rem;
+  border: solid #607d8b;
+  border-width: 0.1rem;
+  border-radius: 0.25rem;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%;
+}
+
+.search-input {
+  width: 100%;
+  height: 3.6rem;
+  margin-top: 0.25rem;
+  border-radius: 0.25rem;
+  background: white;
+  border: 1px solid black;
+  outline: 0;
+  padding: 0 1.6rem;
+  font: 1.6rem Nunito;
+  color: black;
+  position: relative;
+  flex: 1 1 auto;
+  width: 1%;
+  min-width: 0;
+}
+.btn-search{
+  height: 36px;
+  padding: 4px;
+  margin: 3px;
+  font-family: "Nunito", sans-serif;
 }
